data/all_generated_tests/raw_wast_tests/nop_StackCorruption_135.wast
;; 6. **Test Description**:     Include `nop` instructions in recursive function definitions. Test the correctness of the stack before and after recursion to ensure `nop` does not produce incorrect stack frames.    **Constraint**: `nop` must not modify recursive call stack behavior.    **Reasoning**: Ensures that recursive stack allocations and deallocations remain intact without corruption from `nop`.

(assert_invalid
  (module
    (func $recursive-nop (param i32) (result i32)
      (local.get 0)
      (i32.const 0)
      (i32.eq)
      (if (result i32)
        (then
          (local.get 0)
        )
        (else
          (local.get 0)
          (i32.const 1)
          (i32.sub)
          (call $recursive-nop)
          (nop)
        )
      )
    )
    (start 0)
  )
  "function type mismatch"
)